--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "formik": "^2.4.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
